# rne-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-20-rne-cli.md
docs/superpowers/specs/: 2026-04-20-rne-cli-design.md
src/rne_cli/: __init__.py  cache.py  client.py  config.py  errors.py  format.py  main.py  siren.py
src/rne_cli/commands/: auth.py  company.py  docs.py  history.py  people.py
tests/: conftest.py  test_cache.py  test_client.py  test_config.py  test_format.py  test_siren.py
tests/fixtures/: attachments.json  company_microentreprise.json  company_sarl.json  company_sas.json  search_results.json
