[project]
name = "rne-cli"
version = "0.1.0"
description = "CLI pour l'API Registre National des Entreprises (INPI)"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Figue"}]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
rne = "rne_cli.main:app"

[project.urls]
Homepage = "https://github.com/Figu3/rne-cli"
Issues = "https://github.com/Figu3/rne-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rne_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/rne_cli"]
omit = ["src/rne_cli/main.py", "src/rne_cli/commands/*"]
